# nexus-tui

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  compound-engineering.local.md
src/: ansi.rs  app.rs  capture_worker.rs  cli.rs  config.rs  conversation.rs  db.rs  feedback_scanner.rs  git.rs  grouping.rs  main.rs  mock.rs  path_complete.rs  repo_config.rs  scanner.rs  text_utils.rs  theme.rs  time_utils.rs  tmux.rs  types.rs  ui.rs  update_checker.rs
todos/: 001-complete-p1-eprintln-corrupts-tui.md  002-complete-p1-is-multiple-of-portability.md  003-complete-p2-symlink-following.md  004-complete-p2-no-sort-guarantee.md  005-complete-p2-count-subagents-ordering.md  006-complete-p2-document-field-semantics.md  007-complete-p2-quick-scan-data-provenance.md  008-complete-p3-u16-truncation.md  009-complete-p3-remove-test-cleanup-boilerplate.md  010-complete-p3-bufreader-buffer-size.md  011-complete-p3-utf8-truncation-test.md  012-pending-p1-utf8-truncation-panics.md  013-pending-p1-tmux-session-name-mismatch.md  014-pending-p1-cache-visible-nodes.md  015-pending-p1-cache-per-frame-tree-walks.md  016-pending-p2-consolidate-datetime-utils.md  017-pending-p2-remove-unimplemented-tree-modes.md  018-pending-p2-mark-active-sessions-quadratic.md  019-pending-p2-db-get-tree-n-plus-one.md  020-pending-p2-grouping-apply-rules-n-plus-one.md  021-pending-p2-cli-subcommands-agent-parity.md  022-pending-p2-is-complete-is-active-semantic-bug.md  023-pending-p2-silent-tmux-error-swallowing.md  024-pending-p2-inconsistent-widget-theming.md  025-pending-p2-tmp-fallback-when-home-unset.md  (+18 more)
(+41 files in other folders)
