[package]
name = "nexus"
version = "0.1.0"
edition = "2021"
description = "Cyberpunk TUI session manager for Claude Code"

[dependencies]
ratatui = "0.30"
crossterm = "0.29"
tachyonfx = "0.25"
clap = { version = "4.5", features = ["derive"] }
dirs = "6"
color-eyre = "0.6"
fslock = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
rusqlite = { version = "0.34", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
ansi-to-tui = "8"

[profile.release]
opt-level = 3
lto = true
strip = true
codegen-units = 1
