[package]
name = "nexus"
version = "0.3.0"
edition = "2021"
description = "TUI session manager for Claude Code"
license = "MIT"
authors = ["Marcos Felipe Eipper"]
repository = "https://github.com/markx3/nexus-tui"
homepage = "https://github.com/markx3/nexus-tui"
keywords = ["tui", "tmux", "claude", "session-manager", "ratatui"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"

[dependencies]
ratatui = "0.30"
crossterm = "0.29"
tachyonfx = "0.25"
clap = { version = "4.5", features = ["derive"] }
dirs = "6"
color-eyre = "0.6"
fslock = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
rusqlite = { version = "0.34", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
ansi-to-tui = "8"
rand = "0.9"
base64 = "0.22"

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = 3
lto = true
strip = true
codegen-units = 1
